--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,5 +5,5 @@ export(fill_description)
 export(get_description)
 export(get_gbif_response)
 export(get_image_url)
+export(get_specimen_url)
 export(open_image)
-export(specimen_page)
